--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "next": "16.0.1",
+    "pg": "^8.16.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "20.19.24",
+    "@types/pg": "^8.15.6",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
