added dockerfile to copy sql file into the container for table creation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
-    image: postgres:16
+    build:
+          dockerfile: Dockerfile.postgres
     container_name: cps714_postgres
     restart: always
     environment:
