--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 services:
   postgres:
-    build:
-      dockerfile: Dockerfile.postgres
+    image: postgres:16
     container_name: cps714_postgres
     restart: always
     environment:
       POSTGRES_USER: "${POSTGRES_USER:-root}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-admin}"
-      POSTGRES_DB: "${POSTGRES_DATABASE:-campus_connect_db}"
+      POSTGRES_DB: "${POSTGRES_DATABASE:-postgres}"
       TZ: "UTC"
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
