--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "pg": "^8.16.3",
