Remove local sendgrid.env from repo

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ POSTGRES_DATABASE=campus_connect_db
 POSTGRES_PORT=5432
 POSTGRES_VOLUME=.postgres
 
-# SendGrid (optional)
-SENDGRID_API_KEY=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
+# SendGrid
+SENDGRID_API_KEY=YOUR_SENDGRID_KEY_HERE
 SENDGRID_FROM_EMAIL=sayeed.ahmed@torontomu.ca
