--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest"
+    "lint": "eslint",
+    "test": "vitest"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
@@ -34,8 +36,6 @@
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "5.9.3",
-    "vitest": "^1.3.0",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "5.9.3"
+    "vitest": "^1.3.0"
   }
 }
