--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ POSTGRES_PORT=5432
 POSTGRES_VOLUME=.postgres
 
 # SendGrid
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 SENDGRID_FROM_EMAIL=sayeed.ahmed@torontomu.ca
