--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "drizzle-orm": "^0.44.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -30,6 +34,8 @@
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "5.9.3",
-    "vitest": "^1.3.0"
+    "vitest": "^1.3.0",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "5.9.3"
   }
 }
